examples/velero/nginx-httproute-kong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: demo-velero
spec:
  parentRefs:
    - name: kong
      namespace: kong
      kind: Gateway
  hostnames:
    - nginx-velero.127-0-0-1.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
