examples/velero/nginx-ingress-haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: demo-velero
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: haproxy
  rules:
    - host: nginx-velero.127-0-0-1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
